[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "whatstk"
version = "0.7.1"
description = "Parser and analytics tools for WhatsApp group chats"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "Lucas Rodes-Guirao"}
]
keywords = ["whatsapp", "analysis", "parser", "chat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "emoji~=2.10.1",
    "numpy~=1.26.4",
    "pandas~=2.2.1",
    "plotly~=5.20.0",
    "seaborn~=0.13.2",
]

[project.optional-dependencies]
gdrive = [
    "PyDrive2~=1.15.0",
    "PyYAML~=6.0",
]
generate = [
    "scipy~=1.12.0",
    "python-lorem==1.2.0",
]
full = [
    "whatstk[gdrive,generate]",
]
test = [
    "pytest~=7.2.0",
    "pytest-cov~=4.0.0",
    "coverage~=7.2.2",
    "codecov~=2.1.0",
    "pytest-html~=3.2.0",
    "pytest-mock~=3.10.0",
]
lint = [
    "flake8~=6.0.0",
    "flake8-docstrings~=1.7.0",
    "flake8-bugbear~=23.3.0",
    "flake8-builtins~=2.1.0",
    "flake8-bandit~=4.1.0",
    "flake8-mutable~=1.2.0",
    "flake8-annotations~=3.0.0",
    "flake8-html~=0.4.3",
]
docs = [
    "recommonmark==0.6.0",
    "Sphinx~=5.3.0",
    "sphinx-rtd-theme==0.4.3",
    "sphinx-copybutton~=0.5.2",
    "sphinx-git==11.0.0",
    "autodocsumm~=0.2.11",
    "auto-changelog~=0.6.0",
    "docutils==0.16",
]
dev = [
    "whatstk[test,lint,docs]",
    "bump-my-version~=0.26.0",
]

[project.urls]
Documentation = "https://whatstk.readthedocs.io/en/stable/"
Github = "http://github.com/lucasrodes/whatstk"
"Bug Tracker" = "https://github.com/lucasrodes/whatstk/issues"

[project.scripts]
whatstk-generate-chat = "whatstk.scripts.generate_chats:main"
whatstk-to-csv = "whatstk.scripts.txt_to_csv:main"
whatstk-graph = "whatstk.scripts.graph:main"

[tool.setuptools]
packages = ["whatstk"]
include-package-data = true

[tool.setuptools.package-data]
whatstk = ["whatsapp/assets/header_format_support.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["whatstk"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bumpversion]
current_version = "0.7.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.(?P<pre>[a-z]+)(?P<prenum>\\d+))?"
serialize = [
    "{major}.{minor}.{patch}.{pre}{prenum}",
    "{major}.{minor}.{patch}"
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"

[tool.bumpversion.parts.pre]
optional_value = "stable"
values = ["dev", "a", "b", "rc", "stable"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "whatstk/__init__.py"

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = "version = 'v{current_version}'"
replace = "version = 'v{new_version}'"

[[tool.bumpversion.files]]
filename = "README.md"
